--- a/mila_website/.env
+++ b/mila_website/.env
@@ -1,12 +1,12 @@
 # Configuration SMTP pour l'envoi des emails
-SMTP_HOST=smtp.gmail.com
-SMTP_USERNAME=mulagore62@gmail.com
-SMTP_PASSWORD=soujrpfhqdvemjtl
-RECAPTCHA_SECRET_KEY=6LeSKBMqAAAAAPWOQk0gSHVyrRzhS_xspS7SLvb3
-RECIPIENT_EMAIL=florent.levasseur@luxantinnovation.com
+SMTP_HOST=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+RECAPTCHA_SECRET_KEY=
+RECIPIENT_EMAIL=
 
 # Configuration de la base de données
-DB_HOST=localhost
-DB_NAME=newsletter_db
-DB_USERNAME=root
+DB_HOST=
+DB_NAME=
+DB_USERNAME=
 DB_PASSWORD=
